--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -268,6 +268,11 @@ header .entry-meta {
 	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 }
+.about-me-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 .author-container{
 	display: flex;
 }
