--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -48,6 +48,10 @@
 		display: inline;
 	}
 }
+.warning {
+	padding: 4px 8px;
+	@include rounded(3px);
+}
 
 // Global Transition
 // ---------------------------------------------------
