--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,13 +22,19 @@
             </div>
         {% endif %}
       <h1 class="post-title entry-title">{{ page.title }}</h1>
+
+      {{ content }}
+
       {% if page.blogger_id %}
           <p class="warning">
             This post <a href="{{ page.blogger_orig_url }}" target="_blank">was originaly published</a> on my <a href="http://byteloom.blogspot.com" target="_blank">previous blog</a> and moved here. Some links and resources might not be up to date.
           </p>
       {% endif %}
-
-      {{ content }}
+      {% if page.original_url %}
+          <p class="warning">
+            This article <a href="{{ page.original_url }}" target="_blank">was originaly published</a> on <a href="{{ page.source_page_url }}" target="_blank">{{ page.source_page_name }}</a>.
+          </p>
+      {% endif %}
       <footer class="entry-meta">
         <span class="entry-tags">{% for tag in page.tags %}<a href="{{ site.url }}/tags#{{ tag }}" title="Pages tagged {{ tag }}" class="tag"><span class="term">{{ tag }}</span></a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
         {% if page.modified %}<span>Updated on <span class="entry-date date updated"><time datetime="{{ page.modified }}">{{ page.modified | date: "%B %d, %Y" }}</time></span></span>
